infra/k8s/exam-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: exam-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: exam
  template:
    metadata:
      labels:
        app: exam
    spec:
      containers:
        - name: exam
          image: abbadanmusa/smart-proctor-exam
          resources:
            limits:
              cpu: "200m"
              memory: "192Mi"
            requests:
              cpu: "200m"
              memory: "192Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: exam-srv
spec:
  type: ClusterIP
  selector:
    app: exam
  ports:
    - name: exam
      protocol: TCP
      port: 3001
      targetPort: 3001
